--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd{
     background: pink;
-    font-family: verdana, DejaVu Sans, sans-serif;
+    font-family: verdana, 'DejaVu Sans', sans-serif;
 }
 #two{
     color:blue;
